--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,6 @@
 
+
+
 <!-- FOOTER -->
 <footer id="footer">
     <!-- top footer -->
@@ -13,8 +15,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
                         <ul class="footer-links">
                             <li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-                            <li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-                            <li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+                            <li><a href="#"><i class="fa fa-phone"></i>9526228414</a></li>
+                            <li><a href="#"><i class="fa fa-envelope-o"></i>powerelectricals@email.com</a></li>
                         </ul>
                     </div>
                 </div>
@@ -23,10 +25,10 @@
                     <div class="footer">
                         <h3 class="footer-title">Categories</h3>
                         <ul class="footer-links">
-                            <li><a href="#">Hot deals</a></li>
-                            <li><a href="#">Laptops</a></li>
-                            <li><a href="#">Smartphones</a></li>
-                            <li><a href="#">Cameras</a></li>
+                            <li><a href="#">Switches</a></li>
+                            <li><a href="#">MCB</a></li>
+                            <li><a href="#">Wires</a></li>
+                            <li><a href="#">Lights</a></li>
                             <li><a href="#">Accessories</a></li>
                         </ul>
                     </div>
