--- a/views/admin/adminLayout/footer.ejs
+++ b/views/admin/adminLayout/footer.ejs
@@ -382,9 +382,9 @@ if (win && document.querySelector('#sidenav-scrollbar')) {
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
 <script src="./assets/js/material-dashboard.min.js?v=3.0.0"></script>
-</body>
+<!-- </body>
 
-</html>
+</html> -->
 
 </body>
 </html>
