--- a/views/users/email-verified.ejs
+++ b/views/users/email-verified.ejs
@@ -17,10 +17,10 @@
 					<div class="col-md-12">
 						<div class="newsletter">
 							<p>Your Email has been  <strong>verified</strong></p>
-							<!-- <form>
+							<form>
 								<input class="input" type="email" placeholder="Enter Your Email">
 								<button class="newsletter-btn"><i class="fa fa-envelope"></i> Subscribe</button>
-							</form> -->
+							</form>
 							<ul class="newsletter-follow">
 								<li>
 									<a href="#"><i class="fa fa-facebook"></i></a>
