--- a/views/users/verification.ejs
+++ b/views/users/verification.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,8 +19,8 @@
                   
                       <form action="" method="post">
                         <div class="d-flex align-items-center ">
-                          <!-- <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i> -->
-                          <span class="h3 fw-bold mb-0">Verification</span>
+                           <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i> -->
+                          <!-- <span class="h3 fw-bold mb-0">Verification</span>
                         </div>
                         <div class="form-outline mb-4">
                         <small class="fw-normal mb-4 py-4">
@@ -30,9 +30,9 @@
       
                         <div class="form-outline mb-4">
                           <label class="form-label" 
-                          >Password</label>
-                          <input name="password"
-                            type="password"
+                          >Email</label>
+                          <input name="email"
+                            type="email" required
                             class="form-control form-control-lg"/>
                 
                         </div>
@@ -58,7 +58,61 @@
       </section>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-</html>
+</html> -->
 
 
+ 
 
+
+ 
+
+<%-include('../layout/header.ejs') %>
+
+<!-- NEWSLETTER -->
+<div id="newsletter" class="section">
+  <!-- container -->
+  <div class="container">
+    <!-- row -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="newsletter">
+          <span class="h1 fw-bold mb-0">Verification</span>
+          <div class="form-outline mb-4">
+            <small class="fw-normal mb-4 py-4" style="font-size: 15px;">
+              Verify your Email address
+            </small>
+          </div>
+          <div>
+          <form form action="" method="post">
+            <input class="input" type="email" name="email" placeholder="Enter Your Email" >
+            <button type="submit" class="newsletter-btn"><i class="fa fa-envelope" ></i>Send Verification</button>
+            <% if(typeof message !== 'undefined'){%>
+              <p style="color: red; font-size: 20px;"><%= message %></p>
+              <% } %>
+          </form>
+        </div>
+          <ul class="newsletter-follow">
+            <li>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-pinterest"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- /row -->
+  </div>
+  <!-- /container -->
+</div>
+<!-- /NEWSLETTER -->
+
+
+<%-include('../layout/footer.ejs') %>
