--- a/views/layout/navigation.ejs
+++ b/views/layout/navigation.ejs
@@ -38,7 +38,7 @@
 						<!-- <li><a href="#">Hot Deals</a></li> -->
 						<li><a href="#">Categories</a></li>
 						<li><a href="product">Products</a></li>
-						<li><a href="#">Gallery</a></li>
+						<li><a href="cart">Your Cart</a></li>
 						<li><a href="#">About us</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
